Fix linked expertise icon on front page on small displays

--- a/src/css/css-parts/front-page.scss
+++ b/src/css/css-parts/front-page.scss
@@ -195,6 +195,10 @@ div.top {
 
       th {
         max-width: 50%;
+
+        a {
+          width: 100%;
+        }
       }
 
       span {
